--- a/Extracurriculars/Pandas/Simple plot of BTC v GOOG stock.ipynb
+++ b/Extracurriculars/Pandas/Simple plot of BTC v GOOG stock.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -28,6 +33,8 @@
     }
    ],
    "source": [
+    "# Get BTC and GOOG price data from yahoo finance since 2017\n",
+    "\n",
     "BTC_price_data = yf.download('BTC-USD','2017-01-01','2021-01-01')\n",
     "google_price_data = yf.download('GOOGL','2017-01-01','2021-01-01') "
    ]
@@ -60,13 +67,6 @@
     "plt.legend(['BTC', 'Google']);\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -85,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
