completed zipline exercise

--- a/project_4_alpha_research_and_factor_modeling/personal_notes.ipynb
+++ b/project_4_alpha_research_and_factor_modeling/personal_notes.ipynb
@@ -77,6 +77,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We de-mean the values to make the portfolio dollar neutral, i.e. \\\\$ shorts = \\\\$ longs. \n",
+    "\n",
+    "This allows us to test our factor without being influenced by the market movement."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Leverage  \n",
+    "\n",
+    "Leverage is the act of borrowing in order to invest. Borrowing cash in order to go long on more positions may magnify gains but also losses."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Leverage Ratio\n",
+    "\n",
+    "Long \\\\$2m but with a notional of $1m, ratio = 2 etc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Factor Models and Types of Factors"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
