--- a/project_4_alpha_research_and_factor_modeling/personal_notes.ipynb
+++ b/project_4_alpha_research_and_factor_modeling/personal_notes.ipynb
@@ -107,6 +107,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Zipline Pipeline\n",
+    "\n",
+    "Zipline is an open source library used to build a pipeline of stocks from other 8000 securities which we can do calculations on such as factors (numerical outputs) or filters (boolean outputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Factor Models and Types of Factors"
    ]
   },
