fixed img addresses

--- a/project_4_alpha_research_and_factor_modeling/personal_notes.ipynb
+++ b/project_4_alpha_research_and_factor_modeling/personal_notes.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "### Standardized a Factor\n",
     "\n",
-    "<img src=\"images/standardized_factor_math.png\" alt=\"standardized_factor_math\" width=\"500\"/>\n",
+    "<img src=\"Exercises/images/standardized_factor_math.png\" alt=\"standardized_factor_math\" width=\"500\"/>\n",
     "\n",
     "Both of these criteria must be satisfied"
    ]
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/factor_model.png\" alt=\"Linear Factor Model\" width=\"400\"/>"
+    "<img src=\"Exercises/images/factor_model.png\" alt=\"Linear Factor Model\" width=\"400\"/>"
    ]
   },
   {
