--- a/Extracurriculars/Statistics/Probability in Python Lesson/binomial_distributions.ipynb
+++ b/Extracurriculars/Statistics/Probability in Python Lesson/binomial_distributions.ipynb
@@ -10,13 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy\n"
+    "import numpy as np"
    ]
   },
   {
@@ -28,15 +26,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.49961"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# simulate 1 million tests of one fair coin flip\n",
     "# remember, the output of these tests are the # successes, or # heads\n",
-    "tests = np.random.binomial(1, 0.5, int(1e6))\n",
+    "tests = np.random.binomial(n=1, p=0.5, size=int(1e6))\n",
     "\n",
     "# proportion of tests that produced heads\n",
     "(tests == 1).mean()"
@@ -51,16 +58,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.156689\n"
+     ]
+    }
+   ],
    "source": [
     "# simulate 1 million tests of five fair coin flips\n",
-    "tests =\n",
+    "tests = np.random.binomial(5,0.5,int(1e6))\n",
     "\n",
-    "# proportion of tests that produced 1 head\n"
+    "# proportion of tests that produced 1 head\n",
+    "print((tests == 1).mean())"
    ]
   },
   {
@@ -72,16 +86,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 4 3 ... 2 4 7]\n",
+      "0.204964\n"
+     ]
+    }
+   ],
    "source": [
     "# simulate 1 million tests of ten fair coin flips\n",
-    "tests =\n",
+    "tests = np.random.binomial(10,0.5,int(1e6))\n",
+    "print(tests)\n",
     "\n",
-    "# proportion of tests that produced 4 heads\n"
+    "# proportion of tests that produced 4 heads\n",
+    "print((tests == 4).mean())"
    ]
   },
   {
@@ -93,16 +116,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.327853\n"
+     ]
+    }
+   ],
    "source": [
     "# simulate 1 million tests of five biased coin flips\n",
-    "tests = \n",
+    "tests = np.random.binomial(5,0.8,int(1e6))\n",
     "\n",
-    "# proportion of tests that produced 5 heads\n"
+    "# proportion of tests that produced 5 heads\n",
+    "print((tests == 5).mean())"
    ]
   },
   {
@@ -114,17 +144,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.179604\n"
+     ]
+    }
+   ],
    "source": [
     "# simulate 1 million tests of ten biased coin flips\n",
-    "tests = \n",
+    "tests = np.random.binomial(10,0.15,int(1e6))\n",
     "\n",
-    "# proportion of tests that produced at least 3 heads\n"
+    "# proportion of tests that produced at least 3 heads\n",
+    "print((tests >= 3).mean())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -143,9 +187,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
