--- a/Extracurriculars/Statistics/Probability in Python Lesson/conditional-probability-bayes-rule-solutions.ipynb
+++ b/Extracurriculars/Statistics/Probability in Python Lesson/conditional-probability-bayes-rule-solutions.ipynb
@@ -183,7 +183,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -205,9 +208,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
