--- a/Extracurriculars/Statistics/Probability in Python Lesson/conditional_probability_bayes_rule.ipynb
+++ b/Extracurriculars/Statistics/Probability in Python Lesson/conditional_probability_bayes_rule.ipynb
@@ -8,49 +8,192 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Patients with cancer: 0.105  \n",
+    "Patients without cancer: 0.895  \n",
+    "\n",
+    "P(positive|cancer) = 0.905  \n",
+    "P(negative|cancer) = 0.095  \n",
+    "P(positive|\\~cancer) = 0.204  \n",
+    "P(negative|\\~cancer) = 0.796  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>test_result</th>\n",
+       "      <th>has_cancer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>79452</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>81667</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>76297</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36593</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53717</td>\n",
+       "      <td>Negative</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   patient_id test_result  has_cancer\n",
+       "0       79452    Negative       False\n",
+       "1       81667    Positive        True\n",
+       "2       76297    Negative       False\n",
+       "3       36593    Negative       False\n",
+       "4       53717    Negative       False"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load dataset\n",
-    "\n"
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('cancer_test_data.csv')\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.34282178217821785"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What proportion of patients who tested positive has cancer?\n"
+    "# What proportion of patients who tested positive has cancer?\n",
+    "# aka given positive, probability of cancer?\n",
+    "\n",
+    "# filter df down to only positive test results and then\n",
+    "# apply condition of has cancer\n",
+    "df.query('test_result == \"Positive\"')['has_cancer'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6571782178217822"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What proportion of patients who tested positive doesn't have cancer?\n"
+    "# What proportion of patients who tested positive doesn't have cancer?\n",
+    "(df.query('test_result == \"Positive\"')['has_cancer'] == False).mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.013770180436847104"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What proportion of patients who tested negative has cancer?\n"
+    "# What proportion of patients who tested negative has cancer?\n",
+    "df.query('test_result == \"Negative\"')['has_cancer'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9862298195631529"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# What proportion of patients who tested negative doesn't have cancer?\n"
+    "# What proportion of patients who tested negative doesn't have cancer?\n",
+    "(df.query('test_result == \"Negative\"')['has_cancer'] == False).mean()"
    ]
   }
  ],
@@ -70,9 +213,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
