--- a/Extracurriculars/Statistics/Probability in Python Lesson/probability.ipynb
+++ b/Extracurriculars/Statistics/Probability in Python Lesson/probability.ipynb
@@ -12,11 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy\n",
     "import numpy as np \n",
     "import math\n",
     "import scipy.special"
@@ -31,9 +30,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [0 0]\n",
+      " [0 1]\n",
+      " ...\n",
+      " [0 0]\n",
+      " [0 0]\n",
+      " [0 0]]\n",
+      "[1 0 1 ... 0 0 0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.249792"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# simulate 1 million tests of two fair coin flips\n",
     "tests = np.random.randint(2, size=(int(1e6), 2))\n",
@@ -55,13 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.37554"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# simulate 1 million tests of three fair coin flips\n",
     "tests = np.random.randint(2,size=(int(1e6),3))\n",
-    "print(tests)\n",
     "\n",
     "# sums of all tests\n",
     "test_sums = tests.sum(axis=1) \n",
@@ -79,61 +113,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "From simulation: 0.28723\n",
+      "From binomial: 0.28800000000000003\n"
+     ]
+    }
+   ],
    "source": [
     "# simulate 1 million tests of three biased coin flips\n",
     "# hint: use np.random.choice()\n",
     "\n",
-    "baised_coin = [0, 0, 0, 0, 0, 0, 1, 1, 1, 1]\n",
-    "tests = np.random.choice(baised_coin, size=(int(1e6),3))\n",
-    "\n",
-    "print(tests)\n",
+    "tests = np.random.choice([0,1], size=(int(1e6),3), p=[0.6,0.4])\n",
     "\n",
     "# sums of all tests\n",
     "test_sums = tests.sum(axis=1)\n",
     "\n",
     "# proportion of tests that produced exactly one head\n",
-    "print((test_sums == 2).mean())\n",
+    "print('From simulation:',(test_sums == 2).mean())\n",
     "\n",
     "# check with binomial forumla\n",
-    "\n",
-    "p_1h = 0.6**1 * 0.4**2\n",
-    "comb = scipy.special.comb(3, 1)\n",
-    "print(p_1h * comb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-58cade7d409a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[0mnum_trails\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m10000000\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m \u001b[0mcorrect_racks\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrun_trails\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_trails\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_trails\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_trails\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-36-58cade7d409a>\u001b[0m in \u001b[0;36mrun_trails\u001b[1;34m(num_trails)\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[0mcount_correct_racks_2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mtrial\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_trails\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mrack\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrack_em\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrack\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mcorrect_rack\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m             \u001b[0mcount_correct_racks\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-36-58cade7d409a>\u001b[0m in \u001b[0;36mrack_em\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m                           \u001b[1;34m'Black'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Yellow'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Yellow'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Yellow'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'Yellow'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m                           'Yellow', 'Yellow', 'Yellow'])\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpool_balls\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreplace\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mrun_trails\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnum_trails\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.empty(3)\n",
-    "b = np.array([4, 5, 6])\n",
-    "np.vstack((a, b))"
+    "probability_one_head = 0.6**1 * 0.4**2\n",
+    "combinations_three_choose_one = scipy.special.comb(3, 1)\n",
+    "print('From binomial:', probability_one_head*combinations_three_choose_one)"
    ]
   },
   {
@@ -145,14 +152,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 ... 1 1 0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.50015"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# simulate 1 million tests of one die roll\n",
-    "tests = \n",
+    "tests = np.random.randint(2,size=(int(1e6)))\n",
     "\n",
-    "# proportion of tests that produced an even number\n"
+    "# proportion of tests that produced an even number\n",
+    "(tests % 2 == 0).mean()"
    ]
   },
   {
@@ -164,17 +190,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1667"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# simulate the first million die rolls\n",
-    "first = \n",
+    "first = np.random.randint(6,size=(int(1e6)))\n",
     "\n",
     "# simulate the second million die rolls\n",
-    "second = \n",
+    "second = np.random.randint(6,size=(int(1e6)))\n",
     "\n",
-    "# proportion of tests where the 1st and 2nd die rolled the same number\n"
+    "# proportion of tests where the 1st and 2nd die rolled the same number\n",
+    "(first == second).mean()"
    ]
   }
  ],
@@ -194,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
